@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Dec 14 21:26:07 CET 2005
+// Mon Dec 19 15:24:58 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -364,10 +364,12 @@ namespace Mono.Cecil.Binary {
 			m_binaryWriter.BaseStream.Position = 0x200;
 
 			m_binaryWriter.Write (m_textWriter);
-			m_binaryWriter.BaseStream.Position += m_textSect.SizeOfRawData - m_textWriter.BaseStream.Length;
+			m_binaryWriter.Write (new byte [
+				m_textSect.SizeOfRawData - m_textWriter.BaseStream.Length]);
 
 			m_binaryWriter.Write (m_relocWriter);
-			m_binaryWriter.BaseStream.Position += m_relocSect.SizeOfRawData - m_relocWriter.BaseStream.Length;
+			m_binaryWriter.Write (new byte [
+				m_relocSect.SizeOfRawData - m_relocWriter.BaseStream.Length]);
 		}
 	}
 }
