@@ -1,3 +1,9 @@
+2005-12-19  Jb Evain  <jbevain@gmail.com>
+
+	* CodeGen/templates/ImageWriter.cs
+	  Mono.Cecil.Binary/ImageWriter.cs:
+		Revert revision 54409.
+
 2005-12-14  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil.Cil/ICilWorker.cs
